Updated 2 files via CloudCannon.

--- a/dinning.html
+++ b/dinning.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 header:
-    text-color: '#000'
+    text-color: '#ffffff'
     background-color-mobile: '#fff'
-    button-bg: "#000"
-    button-text-color: "#fff"
+    button-bg: '#000'
+    button-text-color: '#000000'
 blocks:
     -
         _id: banner-video
@@ -33,7 +33,7 @@ blocks:
         _id: split-banner-slider
         content:
             subHeading: TARU
-            heading: 
+            heading:
             p-text: >-
                 <p>The signature culinary destination of the resort, Taru offers
                 an immersive dining experience, through reinvented authentic
@@ -41,9 +41,10 @@ blocks:
                 modern cooking techniques and ingredients, balanced with
                 contrasting international specialties.<br /><br />Open 7am -
                 10pm everyday.</p>
-            buttons: 
-                -   text: Discover more
-                    url:     
+            buttons:
+                -
+                    text: Discover more
+                    url:
                     button-color: mint-400
         carousel:
             desktop-image-position: right
@@ -62,18 +63,20 @@ blocks:
         _id: split-banner-slider
         content:
             subHeading: BEACH HOUSE
-            heading: 
+            heading:
             p-text: >-
                 <p>A stunning addition to the Canggu coastline, the Beach House
                 lures with its shimmering pool, and ocean breeze. An ideal
                 setting for craft cocktails and the delicate flavours of the
                 sea.<br /><br /><br />Open 8am - 10pm everyday.</p>
-            buttons: 
-                -   text: Discover more
-                    url:     
+            buttons:
+                -
+                    text: Discover more
+                    url:
                     button-color: mint-400
-                -   text: Reserve a Table
-                    url:     
+                -
+                    text: Reserve a Table
+                    url:
                     button-color: dark
         carousel:
             desktop-image-position: left
@@ -92,18 +95,20 @@ blocks:
         _id: split-banner-slider
         content:
             subHeading: SAZON
-            heading: 
+            heading:
             p-text: >-
                 <p>Led by award-winning Chef Andrew Walsh, experience the
                 neighborhood Spanish hideaway on Batu Bolong, where vibrant
                 atmosphere meets authentic flavours.<br /><br /><br />Mon -
                 Thurs Open 8am - 9pm <br />Fri - Sat Open Noon - 4am</p>
-            buttons: 
-                -   text: Discover more
-                    url:     
+            buttons:
+                -
+                    text: Discover more
+                    url:
                     button-color: mint-400
-                -   text: Reserve a Table
-                    url:     
+                -
+                    text: Reserve a Table
+                    url:
                     button-color: dark
         carousel:
             desktop-image-position: right
@@ -122,18 +127,20 @@ blocks:
         _id: split-banner-slider
         content:
             subHeading: POOL BAR
-            heading: 
+            heading:
             p-text: >-
                 <p>Lounge poolside, where private cabanas offer serene retreats,
                 and the gentle ripple of fountains blends with the rhythmic
                 crash of distant waves along the shore.<br /><br /><br /><br
                 />Open 7am - 7pm everyday.</p>
-            buttons: 
-                -   text: Discover more
-                    url:     
+            buttons:
+                -
+                    text: Discover more
+                    url:
                     button-color: mint-400
-                -   text: Reserve a Table
-                    url:     
+                -
+                    text: Reserve a Table
+                    url:
                     button-color: dark
         carousel:
             desktop-image-position: left
