Updated 6 files via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -3,8 +3,8 @@ layout: default
 header:
     text-color: '#000'
     background-color-mobile: '#fff'
-    button-bg: "#000"
-    button-text-color: "#fff"
+    button-bg: '#000'
+    button-text-color: '#fff'
 blocks:
     -
         _id: banner-video
@@ -33,8 +33,9 @@ blocks:
             beachfront location, coupled with the above and beyond nature of
             Regent service, will assure a memorable event.</p>
         bottom-text:
-                block-content-html: >-
-                    <p><a href="tel:623612019999">TEL: +62 361 201 9999 </a></p><p><a href="mailto:">events@regentbalicanggu.com</a></p>
+            block-content-html: >-
+                <p><a href="tel:623612019999">TEL: +62 361 201 9999
+                </a></p><p><a href="mailto:">events@regentbalicanggu.com</a></p>
         overlay-color-scheme: mint-400
         content-max-width:
         text-alignment: center
@@ -73,23 +74,21 @@ blocks:
     -
         _id: horizontal-scroll-spaces
         block-content-html: >-
-            <h3>WEDDINGS &amp; EVENTS</h3><p
-            > </p><h2 class="large-heading">Inspiring
-            spaces</h2><p">Host with distinction at Regent
-            Bali Canggu, where timeless design and thoughtful service set the
-            stage for inspired occasions, from intimate boardroom meetings to
-            unforgettable weddings.</p>
+            <h3>WEDDINGS &amp; EVENTS</h3><p> </p><h2
+            class="large-heading">Inspiring spaces</h2><p">Host with distinction
+            at Regent Bali Canggu, where timeless design and thoughtful service
+            set the stage for inspired occasions, from intimate boardroom
+            meetings to unforgettable weddings.<p></p></p">
         image-width: max(40%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
         scroll-items-color-scheme: mint-400
-        
         scroll-items:
             -
                 image: /uploads/wedding-scroll1.jpg
                 block-content-html: >-
-                    <h3 class="heading">Beach House</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
+                    <h3 class="heading">Beach House</h3> <p>Lorem ipsum dolor
+                    sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
                 size: 1458 sqm
                 capacity: 120
@@ -100,8 +99,8 @@ blocks:
             -
                 image: /uploads/wedding-scroll2.jpg
                 block-content-html: >-
-                    <h3 class="heading">BEACH LAWN</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
+                    <h3 class="heading">BEACH LAWN</h3> <p>Lorem ipsum dolor sit
+                    amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 size: 1458 sqm
                 capacity: 120
@@ -110,10 +109,10 @@ blocks:
                 long-table: 100
                 link:
             -
-                image: /uploads/wedding-scroll3.jpg
+                image: /uploads/dsc016841-1-2.jpg
                 block-content-html: >-
-                    <h3 class="heading">CHEFS TABLE</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
+                    <h3 class="heading">CHEFS TABLE</h3> <p>Lorem ipsum dolor
+                    sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 size: 1458 sqm
                 capacity: 120
