--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -3,8 +3,8 @@ layout: default
 header:
     text-color: '#000'
     background-color-mobile: '#fff'
-    button-bg: "#000"
-    button-text-color: "#fff"
+    button-bg: '#000'
+    button-text-color: '#fff'
 blocks:
     -
         _id: banner-video
@@ -40,13 +40,14 @@ blocks:
                 class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
                 class="sub-heading">HOURS</h3><p>8am - 11pm</p><h3
                 class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
-            buttons: 
-                -   text: BOOK A TABLE
-                    url:     
+            buttons:
+                -
+                    text: BOOK A TABLE
+                    url:
                     button-color: mint-400
-                    
-                -   text: menu
-                    url:     
+                -
+                    text: menu
+                    url:
                     button-color: mint-400
         carousel:
             desktop-image-position: right
@@ -66,7 +67,12 @@ blocks:
         location: Beach House
         sub-heading: Events
         heading: Upcoming Events at Beach House
-        description: Enhance your  luxurious stay with exclusive offers and complimentary inclusions.
+        description: >-
+            Stay connected to the shoreline at The Beach House. With sweeping
+            ocean views as the backdrop, our events bring together music,
+            flavors, and community in an atmosphere that is both vibrant and
+            serene. Explore what’s ahead and let the sea guide your next
+            experience
         events:
             -
                 heading: DJ Scott Bruce
