--- a/dinning-taru.html
+++ b/dinning-taru.html
@@ -3,8 +3,8 @@ layout: default
 header:
     text-color: '#000'
     background-color-mobile: '#fff'
-    button-bg: "#000"
-    button-text-color: "#fff"
+    button-bg: '#000'
+    button-text-color: '#fff'
 blocks:
     -
         _id: banner-video
@@ -24,7 +24,7 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h3>RESTUARANTS &amp; DINING</h3><h2
+            <h3>RESTAURANTS &amp; DINING</h3><h2
             class="heading-lg">Taru</h2><p>The signature culinary destination of
             the resort, Taru offers an immersive dining experience, through
             reinvented authentic flavours of essential Indonesian dishes,
@@ -46,10 +46,10 @@ blocks:
                 class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
                 class="sub-heading">HOURS</h3><p>7am-10pm</p><h3
                 class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
-                
-            buttons: 
-                -   text: BOOK A TABLE
-                    url:     
+            buttons:
+                -
+                    text: BOOK A TABLE
+                    url:
                     button-color: mint-400
         carousel:
             desktop-image-position: right
