Updated 7 files via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -3,8 +3,8 @@ layout: default
 header:
     text-color: '#fff'
     background-color-mobile: '#000'
-    button-bg: "#fff"
-    button-text-color: "#000"
+    button-bg: '#fff'
+    button-text-color: '#000'
 blocks:
     -
         _id: banner-video
@@ -49,8 +49,8 @@ blocks:
             on a transformative path where the mind resets and the senses are
             elevated. Each step is guided by a clear intent to heal, weaving
             vibrating crystal energy, soothing aromas, and restoring light
-            frequency to uplift wellbeing to new personal heights.</p>
-            <p><a class="button-featured" href="">reserve now</a></p>
+            frequency to uplift wellbeing to new personal heights.</p> <p><a
+            class="button-featured" href="">reserve now</a></p>
         background-desktop-image: /uploads/sense-of-harmony.jpg
         background-mobile-image: /uploads/sense-of-harmony.jpg
         videos:
@@ -81,14 +81,14 @@ blocks:
         mobile-image-width: 80%
         img_aspect: Square
         col:
-                color-scheme: mint-300
+            color-scheme: mint-300
         scroll-items:
             -
                 image: /uploads/treatment1.jpg
                 block-content-html: >-
-                    <h3 class="heading">Signature Sand bed</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p><p></p>
+                    <h3 class="heading">Signature Sand bed</h3> <p>Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut.</p><p></p>
                 link:
                 reserve-link:
                 button:
@@ -97,9 +97,9 @@ blocks:
             -
                 image: /uploads/treatment2.jpg
                 block-content-html: >-
-                    <h3 class="heading">Traditional Massages</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
+                    <h3 class="heading">Traditional Massages</h3> <p>Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut.</p>
                 link:
                 reserve-link:
                 button:
@@ -108,9 +108,9 @@ blocks:
             -
                 image: /uploads/treatment3.jpg
                 block-content-html: >-
-                    <h3 class="heading">Facial rejuvenation</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
+                    <h3 class="heading">Facial rejuvenation</h3> <p>Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut.</p>
                 link:
                 reserve-link:
                 button:
@@ -121,7 +121,7 @@ blocks:
         _id: offset-grid
         content-1:
             subHeading: COLD PLUGE & POOL
-            heading: 
+            heading:
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod  tempor incididunt ut labore et dolore magna
@@ -135,7 +135,7 @@ blocks:
             title: Cold plunge
         content-2:
             subHeading: SAUNA
-            heading: 
+            heading:
             p-text: >-
                 <p>On Canggu Beach, surfers are silhouetted in the morning sun,
                 boards  under arms ready to take on Bali's famous reef
@@ -151,45 +151,65 @@ blocks:
             scheme-color: base
             scheme-padding: small-padding
             scheme-max-width: l
-
-    -   _id: grid-simple-2-col-overlap
+    -
+        _id: grid-simple-2-col-overlap
         desktop-image-position: left
-        text-column: 
-            block-content-html: <h2>Swimming Pools</h2><p>Discover a calming oasis in the heart of Canggu. Secluded cabanas  surround the resort's six swimming pools, providing nestled personal  havens designed to inspire indulgent moments. These intimate spaces are  programmed to offer relaxing offerings on demand, coupled with that soft sea breeze to rebalance the mind and body.</p>
+        text-column:
+            block-content-html: >-
+                <h2>Swimming Pools</h2><p>Discover a calming oasis in the heart
+                of Canggu. Secluded cabanas  surround the resort's six swimming
+                pools, providing nestled personal  havens designed to inspire
+                indulgent moments. These intimate spaces are  programmed to
+                offer relaxing offerings on demand, coupled with that soft sea
+                breeze to rebalance the mind and body.</p>
             color-scheme: mint-400
         text-alignment: left
         image: /uploads/pool-view.jpg
         image-alt: pool view
-    -   _id: grid-simple-2-col-overlap
+    -
+        _id: grid-simple-2-col-overlap
         desktop-image-position: right
-        text-column: 
-            block-content-html: <h2>Health club</h2><p>Begin or end the day in the best possible way. Maintain your fitness regime in the resort's Health Club with dual-functional spaces enabling exercise enthusiasts to stretch, breathe and practice yoga in the mat-based studio, or elevate their heart rate in the spacious gym.</p>
+        text-column:
+            block-content-html: "<h2>Health club</h2><p>Begin or end the day in the best possible way. Maintain your fitness regime in the resort's\_Health Club with dual-functional spaces enabling exercise enthusiasts to stretch, breathe and practice yoga in the mat-based studio, or elevate their heart rate in the spacious gym.</p>"
             color-scheme: mint-400
         text-alignment: left
         image: /uploads/health-club-2.jpg
-        image-alt: pool view    
-    -   _id: grid-simple-2-col-overlap
+        image-alt: pool view
+    -
+        _id: grid-simple-2-col-overlap
         desktop-image-position: left
-        text-column: 
-            block-content-html: <h2>Surf at Batu Balong</h2><p>Discover a calming oasis in the heart of Canggu. Secluded cabanas  surround the resort's six swimming pools, providing nestled personal  havens designed to inspire indulgent moments. These intimate spaces are  programmed to offer relaxing offerings on demand, coupled with that soft sea breeze to rebalance the mind and body.</p>
+        text-column:
+            block-content-html: >-
+                <h2>Surf at Batu Balong</h2><p>Discover a calming oasis in the
+                heart of Canggu. Secluded cabanas  surround the resort's six
+                swimming pools, providing nestled personal  havens designed to
+                inspire indulgent moments. These intimate spaces are  programmed
+                to offer relaxing offerings on demand, coupled with that soft
+                sea breeze to rebalance the mind and body.</p>
             color-scheme: mint-400
         text-alignment: left
         image: /uploads/surf-between-trees.jpg
         image-alt: pool view
-    -   _id: grid
+    -
+        _id: grid
         block-content-html: >-
-            <h3 class="sub-heading">GYM FACILITIES</h3> <h2>Maintain your fitness</h2>
+            <h3 class="sub-heading">GYM FACILITIES</h3> <h2>Maintain your
+            fitness</h2>
         text-alignment: center
         grid-desktop-columns: 3
         grid-mobile-columns: 2
         grid-gap: 3rem
-        col-internal-padding: false        
+        col-internal-padding: false
         img-mixed-aspect: false
         min-height: 0vh
         gap-between-text-box-and-grid: small
-        columns:          
-            -   col-type: text
-                block-content-html: <h3>FREE WEIGHTS</h3><p>With a strong understanding of both the Regent brand & the resort itself. </p>
+        columns:
+            -
+                col-type: text
+                block-content-html: >-
+                    <h3><strong>FREE WEIGHTS</strong></h3><p>With a strong
+                    understanding of both the Regent brand &amp; the resort
+                    itself. </p>
                 link:
                 text-alignment: center
                 vert-alignment:
@@ -201,8 +221,11 @@ blocks:
                 col-height: 1
                 hide-on-mobile: false
                 mobile-first: false
-            -   col-type: text
-                block-content-html: <h3>MAT STRETCHING AREA</h3><p>With a strong understanding of both the Regent brand & the resort itself. </p>
+            -
+                col-type: text
+                block-content-html: >-
+                    <h3>MAT STRETCHING AREA</h3><p>With a strong understanding
+                    of both the Regent brand & the resort itself. </p>
                 link:
                 text-alignment: center
                 vert-alignment:
@@ -214,34 +237,11 @@ blocks:
                 col-height: 1
                 hide-on-mobile: false
                 mobile-first: false
-            -   col-type: text
-                block-content-html: <h3>TREADMILL</h3><p>With a strong understanding of both the Regent brand & the resort itself. </p>
-                link:
-                text-alignment: center
-                vert-alignment:
-                icon-path: /uploads/weight.svg
-                icon-alt:
-                img_aspect: Original
-                color-scheme:
-                col-width: 1
-                col-height: 1
-                hide-on-mobile: false
-                mobile-first: false          
-            -   col-type: text
-                block-content-html: <h3>BARBELLS</h3><p>With a strong understanding of both the Regent brand & the resort itself. </p>
-                link:
-                text-alignment: center
-                vert-alignment:
-                icon-path: /uploads/weight.svg
-                icon-alt:
-                img_aspect: Original
-                color-scheme:
-                col-width: 1
-                col-height: 1
-                hide-on-mobile: false
-                mobile-first: false
-            -   col-type: text
-                block-content-html: <h3>FREE WEIGHTS</h3><p>With a strong understanding of both the Regent brand & the resort itself. </p>
+            -
+                col-type: text
+                block-content-html: >-
+                    <h3>TREADMILL</h3><p>With a strong understanding of both the
+                    Regent brand & the resort itself. </p>
                 link:
                 text-alignment: center
                 vert-alignment:
@@ -253,8 +253,43 @@ blocks:
                 col-height: 1
                 hide-on-mobile: false
                 mobile-first: false
-            -   col-type: text
-                block-content-html: <h3>FREE WEIGHTS</h3><p>With a strong understanding of both the Regent brand & the resort itself. </p>
+            -
+                col-type: text
+                block-content-html: >-
+                    <h3>BARBELLS</h3><p>With a strong understanding of both the
+                    Regent brand & the resort itself. </p>
+                link:
+                text-alignment: center
+                vert-alignment:
+                icon-path: /uploads/weight.svg
+                icon-alt:
+                img_aspect: Original
+                color-scheme:
+                col-width: 1
+                col-height: 1
+                hide-on-mobile: false
+                mobile-first: false
+            -
+                col-type: text
+                block-content-html: >-
+                    <h3>FREE WEIGHTS</h3><p>With a strong understanding of both
+                    the Regent brand & the resort itself. </p>
+                link:
+                text-alignment: center
+                vert-alignment:
+                icon-path: /uploads/weight.svg
+                icon-alt:
+                img_aspect: Original
+                color-scheme:
+                col-width: 1
+                col-height: 1
+                hide-on-mobile: false
+                mobile-first: false
+            -
+                col-type: text
+                block-content-html: >-
+                    <h3>FREE WEIGHTS</h3><p>With a strong understanding of both
+                    the Regent brand & the resort itself. </p>
                 link:
                 text-alignment: center
                 vert-alignment:
@@ -281,4 +316,4 @@ seo:
     index: true
 permalink:
 ---
-<img src="" alt="">
+<img src="" alt="" />
