addeded inital offers

--- a/offers.html
+++ b/offers.html
@@ -22,7 +22,7 @@ blocks:
         min-height: 90vh
         color-scheme: dark
     -
-        _id: events-block
+        _id: offers
         sub-heading: OFFERS
         heading: Unwind in the idyllic setting of Regent Bali Canggu
         description:  Enhance your  luxurious stay with exclusive offers and complimentary inclusions.
