--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -34,7 +34,7 @@ blocks:
             Regent service, will assure a memorable event.</p>
         bottom-text:
                 block-content-html: >-
-                    <p><a href="tel:623612019999">TEL: +62 361 201 9999 </a></p><p><a href="mailto:">events@regentbalicanggu.com</a></p>
+                    <p class="engravers-gothic"><a href="tel:623612019999">TEL: +62 361 201 9999</a></p><p class="engravers-gothic"><a href="mailto:events@regentbalicanggu.com">events@regentbalicanggu.com</a></p>
         overlay-color-scheme: mint-400
         content-max-width:
         text-alignment: center
