--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ header:
 blocks:
     -
         _id: banner-video
-        block-content-html: <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto">
+        block-content-html: <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto" style="max-height:50vh;">
         videos:
             -
                 video_path: /uploads/test-50k-kbs-wave-hb.mp4
