--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 header:
-    text-color: '#ffffff'
+    text-color: '#000'
     background-color-mobile: '#fff'
     button-bg: '#000'
     button-text-color: '#fff'
