--- a/dining.html
+++ b/dining.html
@@ -2,9 +2,9 @@
 layout: default
 header:
     text-color: '#ffffff'
-    background-color-mobile: '#fff'
-    button-bg: '#000'
-    button-text-color: '#000000'
+    background-color-mobile: 'dark'
+    button-bg: mint-400
+    button-text-color: '#fff'
 blocks:
     -
         _id: banner-video
