--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ blocks:
         block-content-max-width: 40rem
         image-width: max(80%, 15rem)
         mobile-image-width: 80%
-        img_aspect: Square
+        img_aspect: Landscape
         scroll-items-color-scheme: mint-400
         scroll-items:
             -
@@ -82,7 +82,7 @@ blocks:
                     intimate retreat of refinement, indulgence, and serene
                     coastal living.</p>
                 link:
-                reserve-link: '#'
+                reserve-link: /suites-and-villas
                 button:
                     text: learn more
                     url:
@@ -94,7 +94,16 @@ blocks:
                     stillness. With curated spirits and butler care, your villa
                     is a sanctuary by the sea.</p>
                 link:
-                reserve-link: '#'
+                reserve-link: /suites-and-villas
+                button:
+                    text: learn more
+                    url:
+            -
+                image: /uploads/private-beach-villa.jpg
+                block-content-html: >-
+                    <h2>Studio Suite</h2> <p>Gaze across the Indian Ocean from your private balcony. Indoors find a king bed and a serene bathroom with a rain shower and teak bathtub. Enjoy thoughtful moments with a complimentary refreshment gallery.</p>
+                link:
+                reserve-link: /suites-and-villas
                 button:
                     text: learn more
                     url:
@@ -240,9 +249,9 @@ blocks:
                 - 10pm everyday.</p>
             buttons:
                 -
-                    text: VIEW MENU
-                    url:
-                    button-color: '#000000'
+                    text: DISCOVER TARU
+                    url: /dining-taru
+                    button-color: mint-400
         carousel:
             desktop-image-position: left
             dots: true
