--- a/weddings-and-events.html
+++ b/weddings-and-events.html
@@ -29,17 +29,17 @@ blocks:
             planning out of your hands so you can focus on building meaningful
             connections with your visitors and guests. With a selection of
             venues for small and intimate social events, to elaborate soirées,
-            we have a selection of spaces for all requests.<br />Our stunning
+            we have a selection of spaces for all requests. Our stunning
             beachfront location, coupled with the above and beyond nature of
             Regent service, will assure a memorable event.</p>
         bottom-text:
                 block-content-html: >-
                     <p class="engravers-gothic"><a href="tel:623612019999">TEL: +62 361 201 9999</a></p><p class="engravers-gothic"><a href="mailto:events@regentbalicanggu.com">events@regentbalicanggu.com</a></p>
         overlay-color-scheme: mint-400
-        content-max-width:
+        content-max-width: 75%
         text-alignment: center
         color-scheme: base
-        min-height: 50vh
+        min-height: 60vh
     -
         _id: banner-split-video
         block-content-html: >-
