--- a/Experiences.html
+++ b/Experiences.html
@@ -71,10 +71,10 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="text-center">EXPERIENCES AT THE RESORT &amp;
-            NEARBY</h3><p class="text-center"> </p><h2
-            class="text-center">Experiences at Regent Bali Canggu</h2><p
-            class="text-center">Lorem ipsum dolor sit amet, consectetur
+            <h3 class="sub-heading">AT THE RESORT &amp;
+            NEARBY</h3><p class=""> </p><h2
+            class="large-heading">Experiences at Regent Bali Canggu</h2><p
+            class="">Lorem ipsum dolor sit amet, consectetur
             adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
             exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -89,7 +89,7 @@ blocks:
             -
                 image: /uploads/experiences1.jpg
                 block-content-html: >-
-                    <h3>School of Surf</h3> <p>Lorem ipsum dolor sit amet,
+                    <h2>School of Surf</h2> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
                 link:
@@ -100,7 +100,7 @@ blocks:
             -
                 image: /uploads/experiences2.jpg
                 block-content-html: >-
-                    <h3>Seamless Journey</h3> <p>Elevate your arrival to one of
+                    <h2>Seamless Journey</h2> <p>Elevate your arrival to one of
                     the finest luxury resorts in Bali with our seamless
                     helicopter transfer. Soar above lush rice terraces, dramatic
                     coastlines, and volcanic peaks as you make your way to
@@ -117,9 +117,9 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="text-center">EXPERIENCES AROUND THE ISLAND</h3><p
-            class="text-center"> </p><h2 class="text-center">Explore the island
-            with curated experiences</h2><p class="text-center">Lorem ipsum
+            <h3 class="sub-heading">AROUND THE ISLAND</h3><p
+            class=""> </p><h2 class="large-heading">Explore the island
+            with curated experiences</h2><p class="">Lorem ipsum
             dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -134,7 +134,7 @@ blocks:
             -
                 image: /uploads/experience3.jpg
                 block-content-html: >-
-                    <h3>Sunrise Water Purification</h3> <p>Embark upon a
+                    <h2>Sunrise Water Purification</h2> <p>Embark upon a
                     transformative pilgrimage to Bali's grandest active water
                     temple. This hallowed site, celebrated for its age-old
                     purification rites, has beckoned travellers in pursuit of
@@ -147,7 +147,7 @@ blocks:
             -
                 image: /uploads/experience4.jpg
                 block-content-html: >-
-                    <h3>Private Cart Tour in Jatiluwih</h3> <p>Venture into the
+                    <h2>Private Cart Tour in Jatiluwih</h2> <p>Venture into the
                     enchanting realm of Jatiluwih, a UNESCO World Heritage site,
                     renowned for its mesmerising terraced rice paddies and
                     deep-rooted cultural legacy. Embark upon an exclusive cart
