Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ header:
 blocks:
     -
         _id: banner-video
-        block-content-html: <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto" style="max-height:70vh;">
+        block-content-html: >-
+            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
+            style="max-height:70vh;">
         videos:
             -
                 video_path: /uploads/test-50k-kbs-wave-hb.mp4
@@ -99,13 +101,34 @@ blocks:
             -
                 image: /uploads/private-beach-villa.jpg
                 block-content-html: >-
-                    <h2>Studio Suite</h2> <p>Gaze across the Indian Ocean from your private balcony. Indoors find a king bed and a serene bathroom with a rain shower and teak bathtub. Enjoy thoughtful moments with a complimentary refreshment gallery.</p>
+                    <h2>Studio Suite</h2> <p>Gaze across the Indian Ocean from
+                    your private balcony. Indoors find a king bed and a serene
+                    bathroom with a rain shower and teak bathtub. Enjoy
+                    thoughtful moments with a complimentary refreshment
+                    gallery.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
                     text: learn more
                     url:
         color-scheme: base
+    -
+        _id: text-block-top-overlap
+        block-content-html: >-
+            <h2 class="heading-lg">With Complements</h2><p>Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut.</p><p></p><p></p><p></p><p><div
+            style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3
+            class="mt-8">Jl. Pantai Batu Bolong No. 93 xx <br />Canggu, Kuta
+            Utara<br />Badung, Bali,
+            Indonesia</h3></div></p><p></p><p></p><p></p><a
+            class="button-featured" href="#"> RESERVE NOW</a>
+        overlay-color-scheme: mint-400
+        content-max-width: 35rem
+        text-alignment: center
+        color-scheme: base
+        min-height: 50vh
     -
         _id: offset-grid
         content-1:
