Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ blocks:
         _id: banner-video
         block-content-html: >-
             <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
-            style="max-height:70vh;">
+            style="max-height:70vh;" />
         videos:
             -
                 video_path: /uploads/test-50k-kbs-wave-hb.mp4
@@ -112,6 +112,23 @@ blocks:
                     text: learn more
                     url:
         color-scheme: base
+    -
+        _id: banner-video
+        block-content-html: >-
+            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
+            style="max-height:70vh;" />
+        videos:
+            -
+                video_path: /uploads/test-50k-kbs-wave-hb.mp4
+                video_type: mp4
+        placeholder_image: /uploads/health-club.jpg
+        controls: false
+        autoplay: true
+        text-alignment: center
+        vert-alignment: middle
+        overlay-opacity: 0.5op
+        min-height: 90vh
+        color-scheme: dark
     -
         _id: text-block-top-overlap
         block-content-html: >-
