Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -114,12 +114,10 @@ blocks:
         color-scheme: base
     -
         _id: banner-video
-        block-content-html: >-
-            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
-            style="max-height:70vh;" />
+        block-content-html: ''
         videos:
             -
-                video_path: /uploads/test-50k-kbs-wave-hb.mp4
+                video_path: /uploads/health-club.jpg
                 video_type: mp4
         placeholder_image: /uploads/health-club.jpg
         controls: false
