Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ blocks:
         autoplay: true
         text-alignment: center
         vert-alignment: middle
-        overlay-opacity: 0.5op
+        overlay-opacity: 0op
         min-height: 90vh
         color-scheme: dark
     -
@@ -133,13 +133,9 @@ blocks:
             <h2 class="heading-lg">With Complements</h2><p>Lorem ipsum dolor sit
             amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut.</p><p></p><p></p><p></p><p><div
-            style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3
-            class="mt-8">Jl. Pantai Batu Bolong No. 93 xx <br />Canggu, Kuta
-            Utara<br />Badung, Bali,
-            Indonesia</h3></div></p><p></p><p></p><p></p><a
+            eiusmod tempor incididunt ut.</p><p></p><p></p><p></p><p></p><a
             class="button-featured" href="#"> RESERVE NOW</a>
-        overlay-color-scheme: mint-400
+        overlay-color-scheme:
         content-max-width: 35rem
         text-alignment: center
         color-scheme: base
