Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@ blocks:
             <h2 class="heading-lg">With Complements</h2><p>Lorem ipsum dolor sit
             amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut.</p><p></p><p></p><p></p><p></p><a
-            class="button-featured" href="#"> RESERVE NOW</a>
+            eiusmod tempor incididunt ut.</p>
         overlay-color-scheme:
         content-max-width: 35rem
         text-alignment: center
